# simpleautocad

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
simpleautocad/: Utility.py  __init__.py  __version__.py  autocad.py  cli.py
simpleautocad/.github/workflows/: workflow.yml
simpleautocad/Autocad/: AcadEntity.py  AcadObject.py  Base.py  Proxy.py  __init__.py
simpleautocad/Autocad/Entities/: Acad3DFace.py  Acad3DPolyline.py  Acad3DSolid.py  AcadArc.py  AcadAttribute.py  AcadAttributeReference.py  AcadBlockReference.py  AcadCircle.py  AcadComparedReference.py  AcadDgnUnderlay.py  AcadDim3PointAngular.py  AcadDimAligned.py  AcadDimAngular.py  AcadDimArcLength.py  AcadDimDiametric.py  AcadDimOrdinate.py  AcadDimRadial.py  AcadDimRadialLarge.py  AcadDimRotated.py  AcadDimension.py  AcadDwfUnderlay.py  AcadEllipse.py  AcadExternalReference.py  AcadExtrudedSurface.py  AcadGeoPositionMarker.py  AcadGeomapImage.py  AcadHatch.py  AcadHelix.py  AcadLWPolyline.py  AcadLeader.py  AcadLine.py  AcadLoftedSurface.py  AcadMInsertBlock.py  AcadMLeader.py  AcadMLine.py  AcadMtext.py  AcadNurbSurface.py  AcadOle.py  AcadPViewport.py  AcadPdfUnderlay.py  (+25 more)
simpleautocad/Autocad/Objects/: AcadAcCmColor.py  AcadApplication.py  AcadBlock.py  AcadBlocks.py  AcadDatabase.py  AcadDatabasePreferences.py  AcadDictionaries.py  AcadDictionary.py  AcadDimStyle.py  AcadDimStyles.py  AcadDocument.py  AcadDocuments.py  AcadDynamicBlockReferenceProperty.py  AcadGroup.py  AcadGroups.py  AcadHyperlink.py  AcadHyperlinks.py  AcadIDPair.py  AcadLayer.py  AcadLayerStateManager.py  AcadLayers.py  AcadLayout.py  AcadLayouts.py  AcadLineType.py  AcadLineTypes.py  AcadMLeaderLeader.py  AcadMLeaderStyle.py  AcadMaterial.py  AcadMaterials.py  AcadMenuBar.py  AcadMenuGroup.py  AcadMenuGroups.py  AcadModelSpace.py  AcadPaperSpace.py  AcadPlot.py  AcadPlotConfiguration.py  AcadPlotConfigurations.py  AcadPopupMenu.py  AcadPopupMenuItem.py  AcadPopupMenus.py  (+44 more)
simpleautocad/Types/: Ac.py  VarType.py  Xdata.py  __init__.py
simpleautocad/Types/Ge/: Matrix.py  Points.py  Tolerance.py  Vector.py  __init__.py
simpleautocad/tests/: conftest.py
simpleautocad/tests/entities/: test_classes.py
