[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleautocad"
version = "1.0.1"
description = "Модуль для работы с AutoCAD через COM интерфейс"
readme = "README.md"
authors = [
    { name = "Andrey Litvinov", email = "busybeaver.bb@gmail.com" }
]
keywords = ["autocad","com"]

license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "pywin32",
    "numpy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
autocad-check = "simpleautocad.cli:main"

[project.urls]
Homepage = "https://github.com/busy4beaver"
Repository = "https://github.com/busy4beaver/simpleautocad"
Documentation = "https://github.com/busy4beaver/simpleautocad#readme"
"Donate" = "https://boosty.to/busybeaver/donate"

[tool.setuptools.packages.find]
include = ["simpleautocad*"]

[tool.setuptools.package-data]
simpleautocad = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v"
testpaths = ["tests"]
